# wayland_fcitx5_indicator

./: Cargo.toml  README.md  config.ron  flake.nix  result
.serena/: project.yml
src/: config.rs  main.rs  nohup.out
